Bug 354985 - Unable to apply previously saved template on CSV import
Summary: Unable to apply previously saved template on CSV import
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-07 12:47 UTC by kramski
Modified: 2015-11-07 17:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kramski 2015-11-07 12:47:37 UTC
The CSV import dialog allows saving and applying a template of input column mappings.

The "Save Template" button puts a .desktop file in $HOME/.local/sharekaddressbook/csv-template/, but the "Apply Template" button never finds a template there.

Looks like a typo. Manually moving templates to "$HOME/.local/share/kaddressbook/csv-template" or a symlink make it work.



Reproducible: Always

Steps to Reproduce:
1. File / Import / Import CSV file ...
2. Select a .csv file
3. Define some field mappings
4. "Save Template..."
5. Try to "Apply Template..."

Actual Results:  
Does not find a previously saved template.

Expected Results:  
Offer one or more previously saved templates to choose from.

KAddressBook 5.0.2
KDE Frameworks 5.15.0
Qt 5.5.1 (built against 5.5.0)
Comment 1 Laurent Montel 2015-11-07 15:58:43 UTC
I confirm it.
I will investigate soon
Comment 2 Laurent Montel 2015-11-07 17:00:09 UTC
Git commit b44ce7a288ee806da71e431318d88d953a136874 by Montel Laurent.
Committed on 07/11/2015 at 16:59.
Pushed by mlaurent into branch 'master'.

Fix Bug 354985 - Unable to apply previously saved template on CSV import

FIXED-IN: 5.1

M  +1    -1    kaddressbook/xxport/csv/csvimportdialog.cpp
M  +1    -1    kaddressbook/xxport/csv/templateselectiondialog.cpp

http://commits.kde.org/kdepim/b44ce7a288ee806da71e431318d88d953a136874