Fix Bug 354985 - Unable to apply previously saved template on CSV import

FIXED-IN: 5.1
BUG: 354985