kaddressbook/xxport/csv/csvimportdialog.cpp
@@ -691,7 +691,7 @@ void CSVImportDialog::saveTemplate()
     }
 
     const QString fileName =
-        QStandardPaths::writableLocation(QStandardPaths::GenericDataLocation) + QLatin1String("kaddressbook/csv-templates/") +
+        QStandardPaths::writableLocation(QStandardPaths::GenericDataLocation) + QLatin1String("/kaddressbook/csv-templates/") +
         QUuid::createUuid().toString() +
         QLatin1String(".desktop");
 
