kaddressbook/xxport/csv/templateselectiondialog.cpp
@@ -115,7 +115,7 @@ public:
     {
         beginResetModel();
         mTemplates.clear();
-        const QStringList dirs = QStandardPaths::locateAll(QStandardPaths::GenericDataLocation, QStringLiteral("kaddressbook/csv-templates/"), QStandardPaths::LocateDirectory);
+        const QStringList dirs = QStandardPaths::locateAll(QStandardPaths::GenericDataLocation, QStringLiteral("/kaddressbook/csv-templates/"), QStandardPaths::LocateDirectory);
         Q_FOREACH (const QString &dir, dirs) {
             const QStringList fileNames = QDir(dir).entryList(QStringList() <<  QStringLiteral("*.desktop"));
             Q_FOREACH (const QString &file, fileNames) {
